hermes_fuzz_executed_few_shot_v2/fuzz_95_execution
'use strict';
function g() {
    var _a = a, a = 4, b = 3;
    b;      
}
g();
function h(a = 2, b = 3) {
    function f() { }
    function s() {
        function g() { f.call("hello"); return a; }
    }
    var _a;
    const g = () => 2 ** 8;
    "hello";
}
const _b = "hello";  
'use strict';
const _c = 1, _d = Math, _e = a(), _f = b(), b; 


Execution Output ------------------:
test.js:18:46: error: missing initializer in const declaration
const _c = 1, _d = Math, _e = a(), _f = b(), b; 
                                             ^
